{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 285,
  "lineage": "4c18058a-dbba-4bdf-2027-e25da94ab756",
  "resources": [
    {
      "module": "module.virtual_machine_master",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250-10252",
                  "10257",
                  "10259",
                  "30000-32767",
                  "8080",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-18T06:44:27.955-07:00",
            "deny": [],
            "description": "Firewall ports allow to vnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abhishek-378314/global/firewalls/default-master-automation-abhishek-378314-ingress-tag",
            "log_config": [],
            "name": "default-master-automation-abhishek-378314-ingress-tag",
            "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
            "priority": 1000,
            "project": "abhishek-378314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/firewalls/default-master-automation-abhishek-378314-ingress-tag",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.virtual_machine_master",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/europe-west3-a/disks/master-automation"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/abhishek-378314/zones/europe-west3-a/instances/master-automation",
            "instance_id": "4198424410072841939",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ankush_sharma_job_gmail_com:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCZmsSDb4F99sWoqyCRdvYj6F6eKN0/gwOZ4LD155LemLFEpx99UDE8OGmgLwWWdM3aAjTrrvRZG5y8T3hB11WogkVG8cY4LZ3r5leLEzY+4GsjBkZpowRMA3D7pG5btjMIn9g87o53eYEn3CbQOV0fG17fsstFLmJwYDhGXnG/EnjTlWPFzRug+C1t8jhptY51vs4bbLCfnTLvLd/XqCbookd64Nce21PFfMmJ2zWo4mj/WBzEt5Zu4miMQU3GXekrYrS8XdAaoyAG9dte79Pg+nara4PsM3ORAStrKT6UV9hYUUkiPXRHOpxyjBAXiUzel/Iykt+vwdYPpKt3MUb+BGQTW2HlKCW9uBFm3x8/dIRN7b0m4q4BqXNHVO4mbO7o/rPS+GSRgpwZFlGHM3ERb [...]
            },
            "metadata_fingerprint": "SZwB4BG2rMM=",
            "name": "master-automation",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.186.232",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
                "network_ip": "10.156.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "abhishek-378314"
              }
            ],
            "project": "abhishek-378314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/europe-west3-a/instances/master-automation",
            "service_account": [
              {
                "email": "476011395424-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250-10252",
                  "10257",
                  "10259",
                  "30000-32767",
                  "8080",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-18T06:44:28.075-07:00",
            "deny": [],
            "description": "Firewall ports allow to vnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abhishek-378314/global/firewalls/default-worker-node1-abhishek-378314-ingress-tag",
            "log_config": [],
            "name": "default-worker-node1-abhishek-378314-ingress-tag",
            "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
            "priority": 1000,
            "project": "abhishek-378314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/firewalls/default-worker-node1-abhishek-378314-ingress-tag",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/asia-east1-a/disks/worker-node1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/abhishek-378314/zones/asia-east1-a/instances/worker-node1",
            "instance_id": "6503217076444364498",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ankush_sharma_job_gmail_com:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCZmsSDb4F99sWoqyCRdvYj6F6eKN0/gwOZ4LD155LemLFEpx99UDE8OGmgLwWWdM3aAjTrrvRZG5y8T3hB11WogkVG8cY4LZ3r5leLEzY+4GsjBkZpowRMA3D7pG5btjMIn9g87o53eYEn3CbQOV0fG17fsstFLmJwYDhGXnG/EnjTlWPFzRug+C1t8jhptY51vs4bbLCfnTLvLd/XqCbookd64Nce21PFfMmJ2zWo4mj/WBzEt5Zu4miMQU3GXekrYrS8XdAaoyAG9dte79Pg+nara4PsM3ORAStrKT6UV9hYUUkiPXRHOpxyjBAXiUzel/Iykt+vwdYPpKt3MUb+BGQTW2HlKCW9uBFm3x8/dIRN7b0m4q4BqXNHVO4mbO7o/rPS+GSRgpwZFlGHM3ERb [...]
            },
            "metadata_fingerprint": "SZwB4BG2rMM=",
            "name": "worker-node1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.201.198.95",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
                "network_ip": "10.140.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/regions/asia-east1/subnetworks/default",
                "subnetwork_project": "abhishek-378314"
              }
            ],
            "project": "abhishek-378314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/asia-east1-a/instances/worker-node1",
            "service_account": [
              {
                "email": "476011395424-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "asia-east1-a"
          }
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250-10252",
                  "10257",
                  "10259",
                  "30000-32767",
                  "8080",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-18T06:44:27.959-07:00",
            "deny": [],
            "description": "Firewall ports allow to vnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abhishek-378314/global/firewalls/default-worker-node2-abhishek-378314-ingress-tag",
            "log_config": [],
            "name": "default-worker-node2-abhishek-378314-ingress-tag",
            "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
            "priority": 1000,
            "project": "abhishek-378314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/firewalls/default-worker-node2-abhishek-378314-ingress-tag",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/us-central1-a/disks/worker-node2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/abhishek-378314/zones/us-central1-a/instances/worker-node2",
            "instance_id": "8853531310912208595",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ankush_sharma_job_gmail_com:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCZmsSDb4F99sWoqyCRdvYj6F6eKN0/gwOZ4LD155LemLFEpx99UDE8OGmgLwWWdM3aAjTrrvRZG5y8T3hB11WogkVG8cY4LZ3r5leLEzY+4GsjBkZpowRMA3D7pG5btjMIn9g87o53eYEn3CbQOV0fG17fsstFLmJwYDhGXnG/EnjTlWPFzRug+C1t8jhptY51vs4bbLCfnTLvLd/XqCbookd64Nce21PFfMmJ2zWo4mj/WBzEt5Zu4miMQU3GXekrYrS8XdAaoyAG9dte79Pg+nara4PsM3ORAStrKT6UV9hYUUkiPXRHOpxyjBAXiUzel/Iykt+vwdYPpKt3MUb+BGQTW2HlKCW9uBFm3x8/dIRN7b0m4q4BqXNHVO4mbO7o/rPS+GSRgpwZFlGHM3ERb [...]
            },
            "metadata_fingerprint": "SZwB4BG2rMM=",
            "name": "worker-node2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.97.241",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
                "network_ip": "10.128.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/regions/us-central1/subnetworks/default",
                "subnetwork_project": "abhishek-378314"
              }
            ],
            "project": "abhishek-378314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/us-central1-a/instances/worker-node2",
            "service_account": [
              {
                "email": "476011395424-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-central1-a"
          }
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker3",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250-10252",
                  "10257",
                  "10259",
                  "30000-32767",
                  "8080",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-18T06:44:27.955-07:00",
            "deny": [],
            "description": "Firewall ports allow to vnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abhishek-378314/global/firewalls/default-worker-node3-abhishek-378314-ingress-tag",
            "log_config": [],
            "name": "default-worker-node3-abhishek-378314-ingress-tag",
            "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
            "priority": 1000,
            "project": "abhishek-378314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/firewalls/default-worker-node3-abhishek-378314-ingress-tag",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/southamerica-east1-a/disks/worker-node3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/abhishek-378314/zones/southamerica-east1-a/instances/worker-node3",
            "instance_id": "6071500608961543889",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ankush_sharma_job_gmail_com:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCZmsSDb4F99sWoqyCRdvYj6F6eKN0/gwOZ4LD155LemLFEpx99UDE8OGmgLwWWdM3aAjTrrvRZG5y8T3hB11WogkVG8cY4LZ3r5leLEzY+4GsjBkZpowRMA3D7pG5btjMIn9g87o53eYEn3CbQOV0fG17fsstFLmJwYDhGXnG/EnjTlWPFzRug+C1t8jhptY51vs4bbLCfnTLvLd/XqCbookd64Nce21PFfMmJ2zWo4mj/WBzEt5Zu4miMQU3GXekrYrS8XdAaoyAG9dte79Pg+nara4PsM3ORAStrKT6UV9hYUUkiPXRHOpxyjBAXiUzel/Iykt+vwdYPpKt3MUb+BGQTW2HlKCW9uBFm3x8/dIRN7b0m4q4BqXNHVO4mbO7o/rPS+GSRgpwZFlGHM3ERb [...]
            },
            "metadata_fingerprint": "SZwB4BG2rMM=",
            "name": "worker-node3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.151.255.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
                "network_ip": "10.158.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "abhishek-378314"
              }
            ],
            "project": "abhishek-378314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/southamerica-east1-a/instances/worker-node3",
            "service_account": [
              {
                "email": "476011395424-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "southamerica-east1-a"
          }
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker4",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443",
                  "2379-2380",
                  "10250-10252",
                  "10257",
                  "10259",
                  "30000-32767",
                  "8080",
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-18T06:44:27.989-07:00",
            "deny": [],
            "description": "Firewall ports allow to vnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/abhishek-378314/global/firewalls/default-worker-node4-abhishek-378314-ingress-tag",
            "log_config": [],
            "name": "default-worker-node4-abhishek-378314-ingress-tag",
            "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
            "priority": 1000,
            "project": "abhishek-378314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/firewalls/default-worker-node4-abhishek-378314-ingress-tag",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.virtual_machine_worker4",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/australia-southeast1-a/disks/worker-node4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Managed by the compute-vm Terraform module.",
            "enable_display": false,
            "id": "projects/abhishek-378314/zones/australia-southeast1-a/instances/worker-node4",
            "instance_id": "7765421257938992848",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ankush_sharma_job_gmail_com:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCZmsSDb4F99sWoqyCRdvYj6F6eKN0/gwOZ4LD155LemLFEpx99UDE8OGmgLwWWdM3aAjTrrvRZG5y8T3hB11WogkVG8cY4LZ3r5leLEzY+4GsjBkZpowRMA3D7pG5btjMIn9g87o53eYEn3CbQOV0fG17fsstFLmJwYDhGXnG/EnjTlWPFzRug+C1t8jhptY51vs4bbLCfnTLvLd/XqCbookd64Nce21PFfMmJ2zWo4mj/WBzEt5Zu4miMQU3GXekrYrS8XdAaoyAG9dte79Pg+nara4PsM3ORAStrKT6UV9hYUUkiPXRHOpxyjBAXiUzel/Iykt+vwdYPpKt3MUb+BGQTW2HlKCW9uBFm3x8/dIRN7b0m4q4BqXNHVO4mbO7o/rPS+GSRgpwZFlGHM3ERb [...]
            },
            "metadata_fingerprint": "SZwB4BG2rMM=",
            "name": "worker-node4",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.151.106.8",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/global/networks/default",
                "network_ip": "10.152.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/regions/australia-southeast1/subnetworks/default",
                "subnetwork_project": "abhishek-378314"
              }
            ],
            "project": "abhishek-378314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/abhishek-378314/zones/australia-southeast1-a/instances/worker-node4",
            "service_account": [
              {
                "email": "476011395424-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "australia-southeast1-a"
          }
        }
      ]
    }
  ]
}